<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_home"
        android:title="@string/main"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/user_statistics"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/nav_support"
                android:icon="@drawable/ic_help"
                android:title="@string/support"/>

            <item android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"/>

        </menu>
    </item>
</menu>