<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolBar"
        app:title="@string/add_theme" />

    <LinearLayout
        android:id="@+id/translate_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/MyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/enter_theme_title"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputThemeNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/write_theme_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputThemeNamedEt"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/MyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/enter_theme_description"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputThemeDescLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/describe_theme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputThemeDescEt"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        style="@style/MyButton"
        android:id="@+id/theme_bt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/ok"

        app:layout_constraintTop_toBottomOf="@+id/translate_layout" />


</FrameLayout>