<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.fragments.navigation.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tg_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tglogo" />

            <TextView
                android:id="@+id/tg_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/MyText"
                android:textSize="20sp"
                android:text="@string/tg_link"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gh_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ghlogo" />

            <TextView
                android:id="@+id/gh_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/MyText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/gh_link"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ds_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/dslogo" />

            <TextView
                android:id="@+id/ds_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/MyText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/ds_link"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>