<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.fragments.navigation.StatisticsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/total_games" />

                <TextView
                    android:id="@+id/total_games_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:text="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/total_answers" />

                <TextView
                    android:id="@+id/total_answers_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:text="5" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/right_answers" />

                <TextView
                    android:id="@+id/right_answers_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:text="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@color/secondary"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/wrong_answers" />

                <TextView
                    android:id="@+id/wrong_answers_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="@style/MyText"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:text="5" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>